# one_brc_rs

./: .gitignore  Cargo.toml  README.md  config.toml  flamegraph-2.html
.github/workflows/: ci.yml
config/app/: config.toml
profiling/: flamegraph-10.html  flamegraph-11.html  flamegraph-12.html  flamegraph-13.html  flamegraph-17.html  flamegraph-18.html  flamegraph-19.html  flamegraph-20.html  flamegraph-21.html  flamegraph-22.html  flamegraph-23.html  flamegraph-24.html  flamegraph-25.html  flamegraph-26.html  flamegraph-27.html  flamegraph-28.html  flamegraph-29.html  flamegraph-31.html  flamegraph-32.html  flamegraph-33.html  flamegraph-34.html  flamegraph-35.html  flamegraph-4.html  flamegraph-5.html  flamegraph-6.html  flamegraph-7.html  flamegraph-8.html  flamegraph-9.html  flamegraph.html
src/: chunk_processor.rs  config_loader.rs  file_processor.rs  float_parser.rs  lib.rs  line_parser.rs  line_processor.rs  main.rs  map_processor.rs  result_outputter.rs  running_mode.rs  station.rs  utils.rs
tests/: chunk_processor.rs  config_loader.rs  float_parser.rs  line_processor.rs  map_processor.rs  running_mode.rs  station.rs  utils.rs
