[package]
name = "one_brc_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
codegen-units = 1
lto = false
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3

[profile.dev]
split-debuginfo = "unpacked"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
hashbrown = "0.14.3"
libc = "0.2.153"
log = "0.4.21"
log4rs = "1.3.0"
rayon = {version = "1.10.0", optional = true}
mimalloc = "0.1"

[build]
rustflags = ["-C", "target-cpu=native link-arg=-fuse-lid=lld", "-Z", "threads=8"]
